Bug 1247804 - Enable seamless cubemaps where available. - r=jrmuizel